user-api/kubernetes/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users-api-ingress
  namespace: users-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: users-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: users-api-service
                port:
                  number: 8080
    - host: api.users-api.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: users-api-service
                port:
                  number: 8080
